--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 
   flutter_svg: ^0.22.0
   flutter_riverpod: ^0.14.0+3
+  liquid_progress_indicator: ^0.4.0
 
 dev_dependencies:
   flutter_test:
